Prepare JOSS submission: restructure paper and add PDF workflow
  - Update authorship: SC Vollmer (sole author), York University
  - Move rglenn to contributors (PCB layout 2019-2020)
  - Fix bibliography errors and add missing references
  - Add mandatory JOSS 2026 sections
  - Add AI Usage Disclosure per 2026 policy
  - Add GitHub Actions workflow for PDF generation

--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,4 @@
-@article{Choi2015,
+@article{Choi2013,
   title={Vibrotactile display: Perception, technology, and applications},
   author={Choi, Seungmoon and Kuchenbecker, Katherine J},
   journal={Proceedings of the IEEE},
@@ -13,7 +13,7 @@
 @inproceedings{Kreimeier2019,
   title={Evaluation of different types of haptic feedback influencing the task-based presence and performance in virtual reality},
   author={Kreimeier, Julian and G{\"o}tzelmann, Timo},
-  booktitle={Proceedings of the 12th ACM International Conference on PErvasive Technologies Related to Assistive Environments},
+  booktitle={Proceedings of the 12th ACM International Conference on Pervasive Technologies Related to Assistive Environments},
   pages={289--298},
   year={2019},
   doi={10.1145/3316782.3321536}
@@ -68,4 +68,20 @@
   year={2020},
   url={https://ohwr.org/cern_ohl_p_v2.txt},
   note={Accessed: 2024-01-25}
+}
+
+@misc{Hackaday2020,
+  title={In Pursuit of Haptics for a Better VR Experience},
+  author={{Hackaday}},
+  year={2020},
+  url={https://hackaday.com/2020/02/12/in-pursuit-of-haptics-for-a-better-vr-experience/},
+  note={Accessed: 2026-02-16}
+}
+
+@misc{Mitacs2023,
+  title={Washable Wearables for Affordable and Aesthetic Augmentation of Visuo-Tactile Sensory Perception Enhancement in Mixed Reality},
+  author={{Mitacs}},
+  year={2023},
+  url={https://www.mitacs.ca/our-projects/washable-wearables-for-affordable-and-aesthetic-augmentation-of-visuo-tactile-sensory-perception-enhancement-in-mixed-reality/},
+  note={Mitacs Accelerate Grant. Accessed: 2026-02-16}
 }
