Remove unread citations and add legitimate references from 2019 work

--- a/paper.bib
+++ b/paper.bib
@@ -1,45 +1,26 @@
-@article{Choi2013,
-  title={Vibrotactile display: Perception, technology, and applications},
-  author={Choi, Seungmoon and Kuchenbecker, Katherine J},
-  journal={Proceedings of the IEEE},
-  volume={101},
-  number={9},
-  pages={2093--2104},
-  year={2013},
-  publisher={IEEE},
-  doi={10.1109/JPROC.2012.2221071}
+@inproceedings{Giordano2015,
+  title={Design and implementation of a whole-body haptic suit for "Ilinx", a multisensory art installation},
+  author={Giordano, Marcello and Hattwick, Ian and Franco, Ivan and Egloff, Deborah and Frid, Emma and Lamontagne, Valérie and Martinucci, Marco and Hennekes, Jeremy and Salter, Chris and Wanderley, Marcelo M},
+  booktitle={Proceedings of the 12th International Conference on Sound and Music Computing},
+  pages={169--175},
+  year={2015}
 }
 
-@inproceedings{Kreimeier2019,
-  title={Evaluation of different types of haptic feedback influencing the task-based presence and performance in virtual reality},
-  author={Kreimeier, Julian and G{\"o}tzelmann, Timo},
-  booktitle={Proceedings of the 12th ACM International Conference on Pervasive Technologies Related to Assistive Environments},
-  pages={289--298},
-  year={2019},
-  doi={10.1145/3316782.3321536}
+@inproceedings{Lamontagne2015,
+  title={The Ilinx Garment: Whole-body tactile experience in a multisensorial art installation},
+  author={Lamontagne, Valérie and Hattwick, Ian and Franco, Ivan and Giordano, Marcello and Egloff, Deborah and Martinucci, Marco and Hennekes, Jeremy and Salter, Chris and Wanderley, Marcelo M},
+  booktitle={Proceedings of the International Symposium on Electronic Arts},
+  year={2015},
+  address={Vancouver, Canada}
 }
 
-@article{Culbertson2018,
-  title={Haptics: The present and future of artificial touch sensation},
-  author={Culbertson, Heather and Schorr, Samuel B and Okamura, Allison M},
-  journal={Annual Review of Control, Robotics, and Autonomous Systems},
-  volume={1},
-  pages={385--409},
-  year={2018},
-  publisher={Annual Reviews},
-  doi={10.1146/annurev-control-060117-105043}
-}
-
-@article{Schneider2017,
-  title={HapticHead: A spherical vibrotactile grid around the head for 3D guidance in virtual and augmented reality},
-  author={Schneider, Oliver and MacLean, Karon and Swindells, Colin and Booth, Kellogg},
-  journal={IEEE Transactions on Haptics},
-  volume={10},
-  number={1},
-  pages={118--130},
+@inproceedings{Hattwick2017,
+  title={The Vibropixels: a scalable wireless tactile display system},
+  author={Hattwick, Ian and Franco, Ivan and Wanderley, Marcelo M},
+  booktitle={International Conference on Human Interface and the Management of Information},
+  pages={517--528},
   year={2017},
-  publisher={IEEE},
-  doi={10.1109/TOH.2016.2587704}
+  organization={Springer}
 }
 
 @misc{AdafruitDRV2605,
@@ -78,10 +59,10 @@
   note={Accessed: 2026-02-16}
 }
 
-@misc{Mitacs2023,
+@misc{Mitacs2021,
   title={Washable Wearables for Affordable and Aesthetic Augmentation of Visuo-Tactile Sensory Perception Enhancement in Mixed Reality},
   author={{Mitacs}},
-  year={2023},
+  year={2021},
   url={https://www.mitacs.ca/our-projects/washable-wearables-for-affordable-and-aesthetic-augmentation-of-visuo-tactile-sensory-perception-enhancement-in-mixed-reality/},
-  note={Mitacs Accelerate Grant. Accessed: 2026-02-16}
+  note={Mitacs Accelerate Grant (Lab2Market). Accessed: 2026-02-16}
 }
