Add citation for 2019 Tactical Tactile Textiles research report

--- a/paper.bib
+++ b/paper.bib
@@ -51,6 +51,15 @@
   note={Accessed: 2024-01-25}
 }
 
+@techreport{Vollmer2019,
+  title={Tactical Tactile Textiles: An exploration in the design of on-body haptics as a means for facilitating collaborative creativity},
+  author={Vollmer, SC},
+  year={2019},
+  institution={York University, Computational Arts},
+  type={Research Report},
+  doi={10.13140/RG.2.2.31691.34081}
+}
+
 @misc{Hackaday2020,
   title={In Pursuit of Haptics for a Better VR Experience},
   author={{Hackaday}},
